# mini-infer

./: README.md  pyproject.toml  requirements.txt
tests/: test_pytorch_basic.py
