[project]
name = "mini-infer"
version = "0.1.0"
description = "自建 AI 推理引擎，仅用于学习"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "safetensors>=0.4",
    "tqdm>=4.66",
    "sentencepiece>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py312"
line-length = 120
